--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 .column {
+    margin: 0px;
     border: 1px solid black;
     display: flex;
     flex-grow: 1;
@@ -19,7 +20,12 @@ body {
 }
 
 .row {
+    margin: 0px;
     border: 1px solid black;
     display: flex;
     flex-grow: 1;
+}
+
+.black {
+    background-color: black;
 }
